Prevent library name from wrapping onto two lines on work pages.

--- a/_includes/styles/comlib.css
+++ b/_includes/styles/comlib.css
@@ -35,6 +35,7 @@
 #work-library-name a {
 	font-size: 1.3rem;
 	color: black;
+	white-space: nowrap;
 }
 
 
